HFP-2860 Fix BG color + overflow

--- a/styles/h5p.css
+++ b/styles/h5p.css
@@ -551,11 +551,15 @@ div.h5p-fullscreen {
 }
 .h5p-content pre > code,
 .h5peditor pre > code {
+  background-color: #d1d1d1;
   padding: 5px;
   display: block;
   line-height: normal;
   border: 1px solid #c7c7c7;
   border-left-width: 4px;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: auto;
 }
 
 
